fix: Теперь не открывает страницу профиля, сразу страницы проекта. Профиль нужен при создании или отклике. feat: Добавлена новая цель "Развиваю свою идею". А вместе с данной целью поле "О себе" необязательна.
